--- a/Templates/Designs/TTonlineNew/New_SectionLandingPage.cshtml
+++ b/Templates/Designs/TTonlineNew/New_SectionLandingPage.cshtml
@@ -360,7 +360,13 @@ string filterValue8= "Item.Tip='Articole'";
                  <div class="product-image">
                       <a href="{{link}}" class="overlay-link">
                           <figure class=""> 
-                            <img src="/Admin/Public/GetImage.ashx?Image={{image}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=350&Height=230" class="img-responsive"/>             
+                            <img src="/Admin/Public/GetImage.ashx?Image={{image}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=350&Height=230" class="img-responsive"/>    
+                             <div class="stickers-container stickers-container--top-left hidden">
+                                <div class="sticker sticker--new">New!</div>
+                              </div>
+                              <div class="stickers-container stickers-container--top-right hidden">
+                                 <div class="sticker sticker--new">Sale!</div>
+                              </div>         
                           </figure>
                       </a>
                  </div>
@@ -464,7 +470,13 @@ string filterValue8= "Item.Tip='Articole'";
                  <div class="product-image">
                       <a href="{{link}}" class="overlay-link">
                           <figure class=""> 
-                            <img src="/Admin/Public/GetImage.ashx?Image={{image}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=350&Height=230" class="img-responsive"/>    
+                            <img src="/Admin/Public/GetImage.ashx?Image={{image}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=350&Height=230" class="img-responsive"/>   
+                           <div class="stickers-container stickers-container--top-left hidden">
+                              <div class="sticker sticker--new">New!</div>
+                            </div>
+                            <div class="stickers-container stickers-container--top-right hidden">
+                               <div class="sticker sticker--new">Sale!</div>
+                            </div>                             
                           </figure>
                       </a>
                  </div>
