--- a/Templates/Designs/TTonlineNew/Paragraph/New_CaruselProduseHomepage.cshtml
+++ b/Templates/Designs/TTonlineNew/Paragraph/New_CaruselProduseHomepage.cshtml
@@ -45,8 +45,14 @@
                               <a href="{{link}}" class="overlay-link">
                                   <figure class=""> 
                                       @{
-                                          <img src="/Admin/Public/GetImage.ashx?Image={{image}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=350&Height=230&bgcolor=white" alt='{{name}}' class="img-responsive"/>             
+                                          <img src="/Admin/Public/GetImage.ashx?Image={{image}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=5&Format=jpg&Width=350&Height=230&bgcolor=white" alt='{{name}}' class="img-responsive"/>             
                                       }
+                                   <div class="stickers-container stickers-container--top-left hidden">
+                                      <div class="sticker sticker--new">New!</div>
+                                    </div>
+                                    <div class="stickers-container stickers-container--top-right hidden">
+                                       <div class="sticker sticker--new">Sale!</div>
+                                    </div>
                                   </figure>
                               </a>
                          </div>
@@ -155,8 +161,14 @@
                               <a href="{{link}}" class="overlay-link">
                                   <figure class=""> 
                                       @{
-                                          <img src="/Admin/Public/GetImage.ashx?Image={{image}}&Crop=0&Format=jpg&Width=350&Height=230&bgcolor=white" alt='{{name}}' class="img-responsive"/>             
+                                          <img src="/Admin/Public/GetImage.ashx?Image={{image}}&Crop=5&Format=jpg&Width=350&Height=230&bgcolor=white" alt='{{name}}' class="img-responsive"/>             
                                       }
+                                     <div class="stickers-container stickers-container--top-left hidden">
+                                        <div class="sticker sticker--new">New!</div>
+                                      </div>
+                                      <div class="stickers-container stickers-container--top-right hidden">
+                                         <div class="sticker sticker--new">Sale!</div>
+                                      </div>
                                   </figure>
                               </a>
                          </div>
