--- a/Templates/Designs/TTonlineNew/eCom/ProductList/Comparare.cshtml
+++ b/Templates/Designs/TTonlineNew/eCom/ProductList/Comparare.cshtml
@@ -71,6 +71,12 @@ if(Dealer == "" && Producator == ""){
                              
                               <img src="@imagineProdus" alt='@productName' class="img-responsive"/>             
                           }
+                           <div class="stickers-container stickers-container--top-left hidden">
+                              <div class="sticker sticker--new">New!</div>
+                            </div>
+                            <div class="stickers-container stickers-container--top-right hidden">
+                               <div class="sticker sticker--new">Sale!</div>
+                            </div>
                       </figure>
                   </a>
              </div>
@@ -209,6 +215,12 @@ if(Dealer != "" || Producator != ""){
                              
                               <img src="@imagineProdus" alt='@productName' class="img-responsive"/>             
                           }
+                           <div class="stickers-container stickers-container--top-left hidden">
+                              <div class="sticker sticker--new">New!</div>
+                            </div>
+                            <div class="stickers-container stickers-container--top-right hidden">
+                               <div class="sticker sticker--new">Sale!</div>
+                            </div>
                       </figure>
                   </a>
              </div>
