--- a/Templates/Designs/TTonlineNew/Paragraph/SliderProduseShowroom.cshtml
+++ b/Templates/Designs/TTonlineNew/Paragraph/SliderProduseShowroom.cshtml
@@ -95,6 +95,12 @@ bool first = true;
                              
                               <img src="@imagineProdus" alt='@productName' class="img-responsive"/>             
                           }
+                         <div class="stickers-container stickers-container--top-left hidden">
+                            <div class="sticker sticker--new">New!</div>
+                          </div>
+                          <div class="stickers-container stickers-container--top-right hidden">
+                             <div class="sticker sticker--new">Sale!</div>
+                          </div>
                       </figure>
                   </a>
              </div>
@@ -231,6 +237,12 @@ if(Dealer != "" || Producator != ""){
                              
                               <img src="@imagineProdus" alt='@productName' class="img-responsive"/>             
                           }
+                         <div class="stickers-container stickers-container--top-left hidden">
+                            <div class="sticker sticker--new">New!</div>
+                          </div>
+                          <div class="stickers-container stickers-container--top-right hidden">
+                             <div class="sticker sticker--new">Sale!</div>
+                          </div>
                       </figure>
                   </a>
              </div>
