adaugare informatii despre pret si despre discount la zona de produse

--- a/Templates/Designs/TTonline/css/10_custom/00_style.css
+++ b/Templates/Designs/TTonline/css/10_custom/00_style.css
@@ -873,7 +873,6 @@ body.background-image4{ background-image: url('../img/bg4.jpg'); }
 .fixed-sidebar .fixed-main{
   margin-left: 390px;
 }
-/* BEGIN MOVE TO LIVE */
 #header {
   position: fixed;
   top:0px;
@@ -886,7 +885,6 @@ body.background-image4{ background-image: url('../img/bg4.jpg'); }
 #header.unpinned {
   top: -127px;
 }
-/* END MOVE TO LIVE */
 .fixed-header .set-sidebar{
   position: fixed !important;
   top:50px !important;
@@ -2308,6 +2306,20 @@ a.category:hover{
   outline: none;
   text-decoration: none;
 }
+.news-details{
+  color: #a9a9a9;
+  margin-top:-40px;
+  position: relative;
+  background-color: #fff;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 400;
+  margin-right: 25px;
+  margin-left: 25px;
+  z-index: 10;
+  padding: 2em;
+  padding-top: 10px;
+}
 
 .col-companie .small-block .news-details{
   color: #a9a9a9;
@@ -2374,6 +2386,17 @@ a.category:hover{
   color: #000;
 }
 
+.small-block .news-details{
+  position: absolute;
+  background: #fff;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 400;
+  z-index: 10;
+  bottom: -90px;
+  left: 1px;
+  right: 1px;
+}
 .big-block .news-title{
   /*font-size: 41px;
   line-height: 45px;*/
@@ -6493,7 +6516,7 @@ li.active a{
 
 
 .row-promotii-produs{
- 	min-height: 38px; 
+ 	min-height: 42px; 
 }
 
 .buton-detalii-lista{
