--- a/Templates/Designs/TTonlineNew/eCom/Product/_Product.cshtml
+++ b/Templates/Designs/TTonlineNew/eCom/Product/_Product.cshtml
@@ -150,6 +150,12 @@
                                     <span>@pretInteger @moneda </span>
                                 </div>
                             }
+                            @if (discount > 0 && dataExpirarePromotie > CurrentDate)
+                            {
+                                <div class="col-xs-12">
+                                    <div class="sticker-promotie">@Translate("Promotie", "Promoție")</div>
+                                </div>
+                            }
                         </div>
                        
                        
