--- a/Templates/Designs/TTonlineNew/css/10_custom/New_Homepage.css
+++ b/Templates/Designs/TTonlineNew/css/10_custom/New_Homepage.css
@@ -200,7 +200,7 @@
     position: absolute;
     display: flex;
     flex-wrap: wrap;
-    padding: 0.5rem 1.5rem;
+    padding: 0.5rem 0rem;
     text-transform: uppercase;
     font-size: 1.2rem;
     top: 1rem;
@@ -213,6 +213,7 @@
 .stickers-container.stickers-container--top-right {
     background-color: #693;
     right: -0.5rem;
+    padding: 0.5rem 1rem;
 }
 /* END PRODUCT STICKERS*/
 #loader {
@@ -476,4 +477,29 @@
     #LoopStiri {
         padding: 15px;
     }
+}
+.sticker-promotie {
+    background-color: red;
+    width: 40%;
+    text-align: center;
+    border-radius: 5px;
+    font-weight: 700;
+    padding: .2em;
+}
+
+.pretIntreg{
+    
+    line-height: 1em;
+    color:black;
+    
+}
+.pretTaiat{
+    text-decoration: line-through;
+    color: white;
+}
+.pretRedus{
+    line-height: 1.2 !important;
+    font-size: 15px !important; 
+    color: red; 
+    font-weight: 600;
 }
