--- a/Templates/Designs/TTonlineNew/Page.cshtml
+++ b/Templates/Designs/TTonlineNew/Page.cshtml
@@ -404,6 +404,7 @@
     </div>  
   </div>
 }
+<div id="loading"></div>
 <div id="loader"><div class="loader-icon"></div></div>
 <!-- Google Analytics -->
 <script>
